# picuma_course_engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
demo/: CMakeLists.txt
demo/src/: main.cpp
engine/: CMakeLists.txt
engine/src/engine/coreModule/: Game.cpp  Game.h
engine/src/engine/ecsModule/: ECS.cpp  ECS.h
engine/src/engine/ecsModule/components/: RigidbodyComponent.h  SpriteComponent.h  TransformComponent.h
engine/src/engine/ecsModule/systems/: MovementSystem.cpp  MovementSystem.h  RenderSystem.cpp  RenderSystem.h
engine/src/engine/logModule/: LogManager.cpp  LogManager.h  LogObserver.h  SpdLogger.cpp  SpdLogger.h
engine/src/engine/resourceModule/: ResourceManager.cpp  ResourceManager.h
engine/src/engine/utilsModule/: Instance.h  KeyId.h  SystemInstance.cpp  SystemInstance.h  types.h
